--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="apple-mobile-web-app-capable" content="yes">
         <title>Untitled</title>
         <link rel="stylesheet" href="css/main.css">
+        <link href="css/media-queries.css" rel="stylesheet" type="text/css">
     </head>
     <body class="font">
         <header id="header">
-            <a href="#header"><img src="img/logo1.png" class="logo" alt="Logo"/></a>
+            <a href="#header"><img src="img/logo1.png" class="logo" alt="Логотип компании"/></a>
             <a href="#header" class="button">Подписаться</a>
         </header>
         <main>
@@ -26,8 +29,8 @@
                             может оказаться ваш знакомый.</p>
                     </div>
                     <div class="icons">
-                        <a href="#section2"><img src="img/icon1.png" alt="icon1"/></a>
-                        <a href="#section2"><img src="img/icon2.png" alt="icon2"/></a>
+                        <a href="#section2"><img src="img/icon1.png" alt="предыдущее"/></a>
+                        <a href="#section2"><img src="img/icon2.png" alt="следующее"/></a>
                     </div>
 
                 </div>
@@ -35,7 +38,7 @@
             </section>
             <section id="section3" class="section3">
                 <div class="title">
-                    <a href="#section3"><img src="img/logo2.png" alt="Logo"></a>
+                    <a href="#section3"><img src="img/logo2.png" alt="Логотип компании"></a>
                     <strong>Сервис Аренды вещей</strong>
                 </div>
                 <label for="email"><strong>Узнайте первыми о запуске:</strong></label>
